assets/style.css
#fixed-footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 60px;
    background-color: darkgrey;
}

#recent-table{
    height: 28vh;
    overflow-y: auto;
    position: relative;
    -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
    mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
}

#banner-img {
    background-image: url("https://bit.ly/2H4Q3AU");
    background-color: #cccccc;
    width: 95%;
    height: 200px;
    object-fit: cover;
    background-position: 80% 80%;
    background-repeat: no-repeat;
    border-radius: 8px 8px 0px 0px;
}

ul.nav-buttons {
    white-space: nowrap;
    overflow-x: scroll;
    width: 54vw;
    /* FIX THIS */
}

ul.nav-buttons li {
    display: inline-block;
    float: none;
}

.star {
    border-right: red double;
}

.table-row {
    border-bottom: gainsboro dotted 1px;
}

